Fix horiz scroll on mobile docs

--- a/docs/css/styles.scss
+++ b/docs/css/styles.scss
@@ -35,6 +35,7 @@ body {
 .wrapper {
 	margin: 0 auto;
 	padding: 0 0 2em 0;
+	overflow-x: hidden;
 }
 
 .masthead {
